# harness-desktop

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  README_en.md  harness-desktop.db-shm  harness-desktop.db-wal  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  ruff.toml  tsconfig.base.json  vitest.workspace.ts
runtime/: harness-runtime.spec  launcher.py  pyproject.toml
runtime/src/harness_runtime/: __init__.py  __main__.py  main.py
runtime/src/harness_runtime/api/: __init__.py  app.py  (+2 more)
runtime/tests/: __init__.py  test_smoke.py
runtime/tests/api/: test_artifact_api.py  test_execution_api.py  test_gate_api.py  test_health_auth.py  test_project_context.py
runtime/tests/approvals/: __init__.py  test_policy.py  test_service.py
runtime/tests/artifacts/: __init__.py  test_artifact_service.py  test_watcher.py
runtime/tests/contract/: __init__.py  test_harness_v1_fixtures.py  test_rpc_schema.py
runtime/tests/executors/: __init__.py  test_bridle_adapter.py  test_executor_contract.py
runtime/tests/gates/: __init__.py  test_gate_engine.py
runtime/tests/knowledge/: test_promotion.py
runtime/tests/persistence/: __init__.py  test_state_store.py
runtime/tests/projects/: __init__.py  test_project_service.py
runtime/tests/protocol/: __init__.py  test_loader_validator.py
runtime/tests/recovery/: __init__.py  test_recovery.py
runtime/tests/runs/: __init__.py  test_run_service.py  test_worktree_manager.py
runtime/tests/workflow/: __init__.py  test_compiler.py  test_dispatcher.py  test_drafts.py  test_zip_io.py
(+420 files in other folders)
